--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.41.0",
     "next": "^15.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
