--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^15.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
