--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
     "@eslint/eslintrc": "^2.1.4",
+    "@svgr/webpack": "^8.1.0",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -32,6 +33,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^8.0.0",
     "eslint-config-next": "13.5.6",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
