--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "typed.js": "^2.1.0"
+    "react-typed": "^2.0.12",
+    "typed.js": "^2.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
