--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lawma-ai-widget",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8002",
   "scripts": {
     "dev": "webpack serve --mode development",
     "build": "webpack --config webpack.config.js --mode production",
