--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "webpack serve --mode development",
-    "build": "webpack --config webpack.config.js --mode production",
+    "dev": "cross-env NODE_ENV=development webpack serve --mode development",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject ./dist && sentry-cli sourcemaps upload ./dist",
+    "build:prod": "cross-env NODE_ENV=production npm run build && npm run sentry:sourcemaps",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@sentry/browser": "^9.15.0",
+    "@sentry/hub": "^7.120.3",
     "@sentry/react": "^9.15.0",
     "@sentry/tracing": "^7.120.3",
     "@types/mixpanel-browser": "^2.54.0",
@@ -29,6 +32,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
     "@eslint/eslintrc": "^2.1.4",
+    "@sentry/cli": "^2.43.1",
     "@svgr/webpack": "^8.1.0",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
@@ -37,6 +41,7 @@
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.0",
     "babel-loader": "^10.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "eslint": "^8.0.0",
     "eslint-config-next": "13.5.6",
